--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -12,3 +12,6 @@ $lightGray: #b2b2b2;
 $darkGray: #929292;
 $errorMessage: #ff7474;
 $successMessage: #bdd36e;
+$greenBackground: rgba(98, 189, 79, 1);
+$blueRgba: rgba(53, 113, 163, 0.2);
+$newGray: #433f3f;
