--- a/css/global.css
+++ b/css/global.css
@@ -275,17 +275,56 @@ h1 {
 }
 .container .grid-container .card {
   border: 1px solid #707070;
+  width: 250px;
+  height: 250px;
   padding: 10px 15px;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  cursor: pointer;
+}
+.container .grid-container .card:hover {
+  background-color: rgba(53, 113, 163, 0.2);
 }
 .container .grid-container .card p {
   font-size: 13px;
   font-weight: bold;
-  color: black;
+  color: #000000;
+  width: 100%;
+  height: 100px;
+}
+.container .grid-container .card .checkSign {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  text-align: center;
+  margin: 10px 10px 0px 0px;
+}
+.container .grid-container .card .checkSign span {
+  display: flex;
+  text-align: center;
+  background-color: rgb(98, 189, 79);
+  color: #ffffff;
+  padding: 5px;
+  font-weight: bold;
+  font-size: 11px;
+}
+.container .grid-container .card .nonCheckSign {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  text-align: center;
+  margin: 10px 10px 0px 0px;
+}
+.container .grid-container .card .nonCheckSign span {
+  display: flex;
+  text-align: center;
+  color: #433f3f;
+  font-weight: bold;
+  font-size: 11px;
+  padding: 5px;
 }
 .container .grid-container .card img {
   margin: 2rem auto 1rem auto;
@@ -302,7 +341,7 @@ h1 {
   margin-right: 5px;
   margin-bottom: 5px;
   font-size: 9px;
-  color: white;
+  color: #ffffff;
 }
 
 .about-body .about-project {
