--- a/css/global.css
+++ b/css/global.css
@@ -205,19 +205,41 @@ h1 {
   border-bottom: 5px solid #3571a3;
 }
 .container .filter-container {
-  margin: 2rem 0;
-  display: none;
+  width: 100%;
+  margin: 2rem 10% 0px 0px;
+  position: absolute;
+  left: -99999px;
+}
+.container .filter-container .swiper-wrapper button {
+  border: none;
+  cursor: pointer;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #fbfbfb);
+}
+.container .filter-container .swiper-wrapper img {
+  opacity: 0.7;
+  width: 12px;
+  height: 20px;
 }
 .container .filter-container.active-filter {
-  display: block;
+  position: static;
 }
 .container .filter-container .swiper-slide {
-  padding: 0 50px;
+  width: 91%;
+  display: flex;
+  justify-content: flex-end;
+  padding: 0px 25px;
+}
+.container .filter-container .swiper-slide .circle-container {
+  height: 76px;
 }
 .container .filter-container .swiper-slide .content-container {
   display: flex;
-  align-items: flex-start;
-  overflow: hidden;
+  width: 1925px;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+}
+.container .filter-container .swiper-slide .content-container::-webkit-scrollbar {
+  display: none;
 }
 .container .filter-container .swiper-slide .content-container .item {
   display: flex;
@@ -241,11 +263,12 @@ h1 {
 }
 .container .filter-container .swiper-slide .content-container .tag {
   padding: 10px;
-  background-color: #c5c5c5;
+  background-color: #ffffff;
   margin-right: 10px;
   font-size: 15px;
-  color: black;
+  color: #000000;
   cursor: pointer;
+  border: 1px solid #000000;
   white-space: nowrap;
 }
 .container .filter-container .swiper-slide .content-container .tag.clicked {
@@ -292,7 +315,6 @@ h1 {
   display: flex;
   font-size: 13px;
   font-weight: bold;
-
   color: #000000;
   width: 100%;
   height: 100px;
