--- a/styles/_mainStyles.scss
+++ b/styles/_mainStyles.scss
@@ -97,6 +97,8 @@ h1 {
 
   .grid-container {
     display: grid;
+    justify-items: center;
+
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 30px;
     padding: 2rem 0;
@@ -114,7 +116,6 @@ h1 {
       grid-template-columns: repeat(1, 1fr);
     }
     .card {
-
       border: 1px solid $cardsBorderColor;
 
       width: 250px;
@@ -854,6 +855,24 @@ h1 {
   }
 }
 
+.initionDecoration {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  color: black;
+  text-decoration: none;
+  margin: 0px 8px;
+  padding: 6.3px;
+
+  &:hover {
+    border: 1px solid $primaryColor;
+    background-color: $primaryColor;
+    border-radius: 50%;
+    color: white;
+    padding: 6.3px;
+  }
+}
 .pagination {
   display: flex;
   justify-content: center;
@@ -862,23 +881,15 @@ h1 {
   .next {
     background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, white 100%);
   }
-
-  .initionDecoration {
-    display: flex;
-    align-items: center;
-    color: black;
-    text-decoration: none;
+  .active {
+    border: 1px solid $primaryColor;
+    background-color: $primaryColor;
+    border-radius: 50%;
+    color: white;
     margin: 0px 8px;
-    padding: 6px;
-
-    &:hover {
-      border: 1px solid $primaryColor;
-      background-color: $primaryColor;
-      border-radius: 50%;
-      color: white;
-      padding: 5px;
-    }
+    padding: 6.3px;
   }
+
   .dots {
     display: flex;
     align-items: center;
