--- a/css/global.css
+++ b/css/global.css
@@ -186,7 +186,7 @@ h1 {
 }
 
 .container {
-  width: 85%;
+  max-width: 1300px;
   margin: 0 auto;
   font-family: "DejaVu Sans";
 }
@@ -367,7 +367,7 @@ h1 {
   display: grid;
   justify-items: center;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 30px;
+  grid-gap: 30px 0px;
   padding: 2rem 0;
 }
 @media screen and (max-width: 1300px) {
@@ -1127,7 +1127,7 @@ h1 {
 .pagination {
   display: flex;
   justify-content: center;
-  margin: 185px 0px 396px 0px;
+  margin: 84px 0px 163px 0px;
 }
 .pagination .pre,
 .pagination .next {
