--- a/styles/_footerStyles.scss
+++ b/styles/_footerStyles.scss
@@ -6,11 +6,15 @@ footer {
   padding: 1.5rem 2rem;
   line-height: 18px;
   .div-1 {
-    width: 100%;
-    margin-bottom: 1rem;
-    p {
-      width: 30%;
-      text-align: left;
+    padding: 10px 0px;
+    display: flex;
+
+    .test2 {
+      a {
+        width: 60%;
+        text-decoration: none;
+        color: inherit;
+      }
     }
   }
   .div-2 {
@@ -20,3 +24,15 @@ footer {
     }
   }
 }
+
+@media (min-width: 1305px) {
+  footer {
+    .div-1 {
+      width: 1230px;
+      margin: 0 auto;
+    }
+  }
+}
+
+// width: 1300px;
+// margin: 0 auto;
