--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,47 +1,46 @@
 header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  box-shadow: 0px 3px 6px #00000029;
-  background: $lightWhite;
-  z-index: 99;
-  nav {
-    width: 91%;
-    margin: 0 auto;
-    font-family: "BPG Nino Mtavruli";
-    height: 80px;
-    @include displayFlex(space-between, center);
 
-    .logo-wrapper {
-      width: 60px;
-      height: 60px;
-      .logo {
-        width: 100%;
-        height: 100%;
-      }
-    }
-    .nav-links {
-      min-width: 40%;
-      @include displayFlex(space-between, null);
-      li {
-        padding-left: 20px;
-        a {
-          color: $darkBlack;
-          font-size: 17px;
-          &:hover {
-            color: $primaryColor;
-          }
-        }
-      }
-    }
-  }
-}
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    box-shadow: 0px 3px 6px #00000029;
+    background: $lightWhite;
+    z-index: 99;
 
-@media (min-width: 1305px) {
-  header {
     nav {
-      width: 1200px;
+        margin: 0 140px;
+        font-family: "BPG Nino Mtavruli";
+        height: 80px;
+        @include displayFlex(space-between, center);
+
+        .logo-wrapper {
+            width: 60px;
+            height: 60px;
+
+            .logo {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .nav-links {
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+
+            li {
+                padding-left: 20px;
+
+                a {
+                    color: $darkBlack;
+                    font-size: 17px;
+
+                    &:hover {
+                        color: $primaryColor;
+                    }
+                }
+            }
+        }
     }
-  }
 }
