--- a/styles/_footerStyles.scss
+++ b/styles/_footerStyles.scss
@@ -5,20 +5,59 @@ footer {
   border: 1px solid $cardsBorderColor;
   padding: 1.5rem 2rem;
   line-height: 18px;
+
   .copyRightDiv {
     padding: 10px 0px;
     display: flex;
+    justify-content: space-between;
 
     .copyRightLink {
-      a {
-        width: 60%;
+      margin-top: 25px;
+
+      .privacy {
         text-decoration: none;
         color: inherit;
       }
+
+
+    }
+
+
+    .contactList {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+
+      .contact {
+        color: black;
+        font-weight: bold;
+        padding-bottom: 15px;
+      }
+
+      .contactEmail {
+        padding-bottom: 15px;
+
+        a {
+          text-decoration: none;
+          color: #707070;
+
+          &:hover {
+            color: $darkBlack;
+          }
+        }
+
+      }
+
+      .contactFacebook {
+        text-decoration: none;
+        color: #707070;
+      }
     }
   }
+
   .div-2 {
     width: 100%;
+
     p {
       text-align: center;
     }
